--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="pic/favicon.ico" type="image/gif" sizes="16x16">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <META NAME="aaron" CONTENT="resume">
   <meta name="description" content="Hsu Chih-Jung Portfolio">
