--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--May you have a nice day-->
 <!--copyright@aaron.zl.hsu@gmail.com-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-tw">
 <head>
   <title>Aaron Hsu</title>
   <link rel="icon" href="pic/favicon.ico" type="image/gif" sizes="16x16">
@@ -71,6 +71,7 @@
 <nav class="navbar navbar-inverse visible-xs">
   <div class="container-fluid">
     <div class="navbar-header">
+    <a class="navbar-brand" href="#">Chih-Jung, Hsu</a>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -78,6 +79,7 @@
       </button>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
+
       <ul class="nav navbar-nav">
         <li class="active" id="menu00"><a data-toggle="tab" href="#home"><img src="pic/icon/icon_16_resume.png" class="menu-icon">Aaron Hsu</a></li>
         <li id="menu01"><a data-toggle="tab" href="#menu1"><img src="pic/icon/icon_16_ui.png" class="menu-icon">Logo & CI</a></li>
@@ -99,7 +101,7 @@
             <li id="product01"><a data-toggle="tab" href="#menu6">Guide Bricks</a></li>
             <li id="product02" ><a data-toggle="tab" href="#menu7">Ming Dynasty Chair</a></li>
             <li><a data-toggle="tab" href="#menu8">Your Vision, My Sight</a></li>
-            <li><a data-toggle="tab" href="#menu9">light</a></li>
+            <li><a data-toggle="tab" href="#menu9">Light Emitting Door</a></li>
           </ul>
         </li>
       </ul>
@@ -112,7 +114,7 @@
 <div class="container-fluid row" >
   
   <!--===left Menu Begin==-->
-  <div class="col-sm-2 sidenav hidden-xs"   >
+  <div class="col-sm-2  sidenav hidden-xs"   >
     <ul class="nav nav-pills nav-stacked "  >
         <li class="active" id="menu00"><a data-toggle="tab" href="#home"><img src="pic/icon/icon_16_resume.png" class="menu-icon">Aaron Hsu</a></li>
         <li id="menu01"><a data-toggle="tab" href="#menu1"><img src="pic/icon/icon_16_ui.png" class="menu-icon">Logo & CI</a></li>
@@ -120,7 +122,7 @@
         <li id="menu03"><a data-toggle="tab" href="#menu3"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">SVG</a></li>
         <li id="illustration"><a data-toggle="tab" href="#menu4"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">Illustration</a></li>
         <li  id="menu06"  data-toggle="tab" ><a data-toggle="collapse" data-target="#ui-left"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">UI & Flow</a>
-          <ul id="ui-left" class="collapse nav  nav-stacked" style="margin-left:3em;padding:0;">
+          <ul id="ui-left" class="collapse nav  nav-stacked" style="margin-left:3em;">
             <li id="ui01"><a data-toggle="tab" href="#ui-1">Licensing Flow</a></li>
             <li id="ui02" ><a data-toggle="tab" href="#ui-2">Web App Mockup</a></li>
             <li><a data-toggle="tab" href="#ui-3">system UI 01</a></li>
@@ -132,13 +134,11 @@
           <ul id="demo" class="collapse nav  nav-stacked" style="margin-left:3em;" >
             <li id="product01"><a data-toggle="tab" href="#menu6">Guide Bricks</a></li>
             <li id="product02" ><a data-toggle="tab" href="#menu7">Ming Dynasty Chair</a></li>
-            <li><a data-toggle="tab" href="#menu8">Viewex</a></li>
-            <li><a data-toggle="tab" href="#menu9">light</a></li>
+            <li id="product03"><a data-toggle="tab" href="#menu8">Your Vision, My Sight</a></li>
+            <li><a data-toggle="tab" href="#menu9">Light Emitting Door</a></li>
           </ul>
         </li>
     </ul>
-    
-
   </div>
   <!--===left Menu End==-->
   <!--===Right Content Begin==-->
@@ -172,7 +172,7 @@
                 <div class='col-sm-10 '>
                   
                   <div class='col-sm-4' >
-                      <h5>Next Step(2016.7~~)<br>.</h5>
+                      <h5>Next Step(2016.7~~)</h5>
                       <hr>
                       <p><span style="font-weight:bold;">UI/GUI Designer</span><br></p>
                       <ul>
@@ -280,7 +280,7 @@
                       </ul>
                   </div>
                   <div class='col-sm-4' >
-                      <h5>你的視界，我的世界</h5>
+                      <h5 id="award03">Your vision, My sight</h5>
                       <hr>
                       <ul>
                         <li>Gigabyte Competition (2009), Silver Award</li>
@@ -712,7 +712,6 @@
                   <div class="col-sm-12"><img src="pic/ui/vsystem/01.png" class="wow fadeIn  img-responsive"></div>
                   <div class="col-sm-12"><img src="pic/ui/vsystem/02.png" class="wow fadeIn  img-responsive"></div>
                   <div class="col-sm-12"><img src="pic/ui/vsystem/04.png" class="wow fadeIn  img-responsive"></div>
-                  <div class="col-sm-12"><img src="pic/ui/vsystem/05.png" class="wow fadeIn  img-responsive"></div>
                 </div>
                 <div class="col-sm-2"></div>
             </div>
@@ -724,29 +723,32 @@
             <div id="menu8" class="tab-pane fade"><!--=============Page08 start====================-->
                 <div class="row text-center" style="background-image:url('pic/product/03.jpg'); background-size:100% auto ;background-repeat: no-repeat;">
                 <h1 style="margin-top:10%;">Your vision, My sight </h1>
-                <p>Exchange our world</p>
+            </div>
+            <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8">
+                    <p class="text-center">「你的視界，我的世界」是一個電子式的望遠鏡，透過無線傳輸的技術，可以讓親子間交換目前所看到的視野。透過這樣視覺的交換，小朋友透過大人的視界了解世界；而大人也可以透過小朋友的視界，重溫兒時回憶。</p>
+                </div>
+                <div class="col-sm-2"></div>
             </div>
             <div class="row" >
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8"><img src="pic/product/03-1.jpg" class="wow fadeIn  img-responsive">
-                <p class="text-center">成人與小孩的身高不同，所看見的視野也就不同。若我們站在巨人的肩膀上，世界將有所不同。</p>
-                <p class="text-center">大人と子供の身長は同じではありません,もし私が巨人の肩に乗って視界も異なっています。</p>
+                <p class="text-center">成人與小孩的身高相異，所見到的事物也不一。</p>
                 </div>
                 <div class="col-sm-2"></div>
             </div>
             <div class="row" >
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8"><img src="pic/product/03-2.jpg" class="wow fadeIn  img-responsive">
-                <p class="text-center">成人與小孩的身高不同，所看見的視野也就不同。若我們站在巨人的肩膀上，世界將有所不同。</p>
-                <p class="text-center">大人と子供の身長は同じではありません,もし私が巨人の肩に乗って視界も異なっています。</p>
+                <p class="text-center">小時候總想著，若能站在巨人的肩膀上，是否能看到不一樣的景色呢?。</p>
                 </div>
                 <div class="col-sm-2"></div>
             </div>
             <div class="row" >
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8"><img src="pic/product/03-3.jpg" class="wow fadeIn  img-responsive">
-                <p class="text-center">成人與小孩的身高不同，所看見的視野也就不同。若我們站在巨人的肩膀上，世界將有所不同。</p>
-                <p class="text-center">大人と子供の身長は同じではありません,もし私が巨人の肩に乗って視界も異なっています。</p>
+                <p class="text-center">產品示意圖</p>
                 </div>
                 <div class="col-sm-2"></div>
             </div>
@@ -754,16 +756,14 @@
             <div class="row" >
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8"><img src="pic/product/03-4.jpg" class="wow fadeIn  img-responsive">
-                <p class="text-center">成人與小孩的身高不同，所看見的視野也就不同。若我們站在巨人的肩膀上，世界將有所不同。</p>
-                <p class="text-center">大人と子供の身長は同じではありません,もし私が巨人の肩に乗って視界も異なっています。</p>
+                <p class="text-center">透過藍芽近距離無限傳輸，可交換所看到的影像。</p>
                 </div>
                 <div class="col-sm-2"></div>
             </div>
             <div class="row" >
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8"><img src="pic/product/03-5.jpg" class="wow fadeIn  img-responsive">
-                <p class="text-center">成人與小孩的身高不同，所看見的視野也就不同。若我們站在巨人的肩膀上，世界將有所不同。</p>
-                <p class="text-center">大人と子供の身長は同じではありません,もし私が巨人の肩に乗って視界も異なっています。</p>
+                <p class="text-center">可以多人同時使用，更添趣味</p>
                 </div>
                 <div class="col-sm-2"></div>
             </div>
@@ -771,8 +771,14 @@
             </div><!--=============Page08 end====================-->
             <div id="menu9" class="tab-pane fade"><!--=============Page09 start====================-->
               <div class="row text-center" style="background-image:url('pic/product/04.jpg'); background-size:100% auto ;background-repeat: no-repeat;">
-                 <h1 style="margin-top:10%;"></h1>
-                  <p></p>
+                 <h1 style="margin-top:10%;color:white;">Light Emitting Door</h1> 
+              </div>
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8">
+                  <img src="pic/product/red.png" class="wow fadeIn  img-responsive" style="margin:0 auto">
+                </div>
+                <div class="col-sm-2"></div>
               </div>
               <div class="row" >
                 <div class="col-sm-2"></div>
@@ -781,9 +787,10 @@
               </div>
               <div class="row" >
                 <div class="col-sm-2"></div>
-                <div class="col-sm-8"><img src="pic/product/04-2.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-8"><img src="pic/product/04-2.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto">
+                   <p>一般而言我們會將逃生指示置於門上，但發生火警時煙霧會遮住逃生指示；另外一方面人們為了躲避濃煙，須盡可能的以低姿態的方式前進。因此，他們將難以發現門上面的逃生指示。將燈置於門下，當發生火警時即時啟動，當人們發現有光從門下透出，可以很容易的找到逃生口。</p></div>
+                </div>
                 <div class="col-sm-2"></div>
-              </div>
                <div class="row" >
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8"><img src="pic/product/04-3.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
@@ -791,7 +798,9 @@
               </div>
                <div class="row" >
                 <div class="col-sm-2"></div>
-                <div class="col-sm-8"><img src="pic/product/04-4.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-8"><img src="pic/product/04-4.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto">
+                <p>設置一個小門在逃生門下方，當人民看到逃生門燈號爬行，抵達後推開小門，即可藉由樓梯逃出火場，小門質輕，推開後立刻關上，打開時所灌入的空氣有限，竄出的煙霧也有限，能夠爭取更多逃生的時間。</p>
+                </div>
                 <div class="col-sm-2"></div>
               </div>
           </div><!--=============Page09 end====================-->       
