--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             <li><a data-toggle="tab" href="#ui-3">system UI 01</a></li>
             <li><a data-toggle="tab" href="#ui-4">system UI 02</a></li>
             <li><a data-toggle="tab" href="#ui-5">system UI 03</a></li>
+            <li><a data-toggle="tab" href="#ui-6">Company Website</a></li>
           </ul>
         </li>
 
@@ -128,6 +129,7 @@
             <li><a data-toggle="tab" href="#ui-3">system UI 01</a></li>
             <li><a data-toggle="tab" href="#ui-4">system UI 02</a></li>
             <li><a data-toggle="tab" href="#ui-5">system UI 03</a></li>
+            <li><a data-toggle="tab" href="#ui-6">Company Website</a></li>
           </ul>
         </li>
         <li  id="menu05"  data-toggle="tab" ><a data-toggle="collapse" data-target="#demo"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">Product Design</a>
@@ -715,7 +717,25 @@
                 </div>
                 <div class="col-sm-2"></div>
             </div>
-          </div><!--=============ui05 end====================-->
+          </div>
+            <div id="ui-6" class="tab-pane fade"><!--=============ui06 start====================-->
+              <div class="row text-center" >
+                <h1 style="margin-top:10%;">Company Website</h1>
+                <p>Graphic & Layout</p>
+                 <a href="http://www.miicspartners.com/" target="_blank"><div  class="btn btn-default " >Miics</div></a>
+              </div>
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8">
+                  <div class="col-sm-12"><img src="pic/ui/web/01.jpg" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/web/02.jpg" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/web/03.jpg" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/web/04.jpg" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/web/05.jpg" class="wow fadeIn  img-responsive"></div>
+                </div>
+                <div class="col-sm-2"></div>
+            </div>
+          </div><!--=============ui06 end====================-->
           <div id="menu6" class="tab-pane fade"><!--=============Page06 start====================-->
           </div><!--=============Page06 end====================-->  
           <div id="menu7" class="tab-pane fade"><!--=============Page07 start====================-->
