--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         <li id="illustration"><a data-toggle="tab" href="#menu4"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">Illustration</a></li>
         <li  id="menu06"  data-toggle="tab" ><a data-toggle="collapse" data-target="#ui"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">UI & Flow</a>
           <ul id="ui" class="collapse nav  nav-stacked"  >
-            <li id="ui01"><a data-toggle="tab" href="#ui-1">License Flow</a></li>
+            <li id="ui01"><a data-toggle="tab" href="#ui-1" onClick="ga(‘send’, ‘event’, ‘ui‘, ‘click to ui‘, ‘flow‘);">License Flow</a></li>
             <li id="ui02" ><a data-toggle="tab" href="#ui-2">Web App Mockup</a></li>
-            <li><a data-toggle="tab" href="#ui-3">system UI 01</a></li>
+            <li><a data-toggle="tab" href="#ui-3" >system UI 01</a></li>
             <li><a data-toggle="tab" href="#ui-4">system UI 02</a></li>
             <li><a data-toggle="tab" href="#ui-5">system UI 03</a></li>
             <li><a data-toggle="tab" href="#ui-6">Company Website</a></li>
@@ -100,9 +100,9 @@
 
         <li  id="menu05"  data-toggle="tab" ><a data-toggle="collapse" data-target="#demo2"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">Product Design</a>
           <ul id="demo2" class="collapse nav  nav-stacked" >
-            <li id="product01"><a data-toggle="tab" href="#menu6">Guide Bricks</a></li>
+            <li id="product01"><a data-toggle="tab" href="#menu6" >Guide Bricks</a></li>
             <li id="product02" ><a data-toggle="tab" href="#menu7">Ming Dynasty Chair</a></li>
-            <li><a data-toggle="tab" href="#menu8">Your Vision, My Sight</a></li>
+            <li><a data-toggle="tab" href="#menu8" >Your Vision, My Sight</a></li>
             <li><a data-toggle="tab" href="#menu9">Light Emitting Door</a></li>
           </ul>
         </li>
