add product design 2 page

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
             <li id="product02" ><a data-toggle="tab" href="#menu7">Ming Dynasty Chair</a></li>
             <li><a data-toggle="tab" href="#menu8" >Your Vision, My Sight</a></li>
             <li><a data-toggle="tab" href="#menu9">Light Emitting Door</a></li>
+            <li><a data-toggle="tab" href="#menu10">Bath Scale</a></li>
+            <li><a data-toggle="tab" href="#menu11">Mobile Phone</a></li>
           </ul>
         </li>
       </ul>
@@ -140,6 +142,8 @@
             <li id="product02" ><a data-toggle="tab" href="#menu7">Ming Dynasty Chair</a></li>
             <li id="product03"><a data-toggle="tab" href="#menu8">Your Vision, My Sight</a></li>
             <li><a data-toggle="tab" href="#menu9">Light Emitting Door</a></li>
+            <li><a data-toggle="tab" href="#menu10">Bath Scale</a></li>
+            <li><a data-toggle="tab" href="#menu11">Mobile Phone</a></li>
           </ul>
         </li>
     </ul>
@@ -759,8 +763,8 @@
           </div><!--=============Page07 end====================--> 
             <div id="menu8" class="tab-pane fade"><!--=============Page08 start====================-->
                 <div class="row text-center" style="background-image:url('pic/product/03.jpg'); background-size:100% auto ;background-repeat: no-repeat;">
-                <h1 style="margin-top:10%;">Your vision, My sight </h1>
-            </div>
+                     <h1 style="margin-top:10%;">Your vision, My sight </h1>
+               </div>
             <div class="row" >
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8">
@@ -840,7 +844,75 @@
                 </div>
                 <div class="col-sm-2"></div>
               </div>
-          </div><!--=============Page09 end====================-->       
+          </div><!--=============Page09 end====================-->
+            <div id="menu10" class="tab-pane fade"><!--=============Page10 start====================-->
+                 <div class="row text-center" style=" background-size:100% auto ;background-repeat: no-repeat;">
+                     <h1 style="margin-top:10%;">Bath Scale </h1>
+                     <p>輕則漣漪，重則大浪</p>
+                  </div>
+              
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/05-1.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-2"></div>
+              </div>
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/05-2.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto">
+                </div>
+                </div>
+                <div class="col-sm-2"></div>
+               <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/05-3.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-2"></div>
+              </div>
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/05-4.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-2"></div>
+              </div>
+
+          </div><!--=============Page10 end====================-->
+          <div id="menu11" class="tab-pane fade"><!--=============Page11 start====================-->
+                 <div class="row text-center" style=" background-size:100% auto ;background-repeat: no-repeat;">
+                     <h1 style="margin-top:10%;">Mobile Phone </h1>
+                     <p>武藏野大學與Kyocera產學合作案</p>
+                     <p>Japan Patent Published No. 2011-176646</p>
+                  </div>
+              
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/06-6.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-2"></div>
+              </div>
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/06-1.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto">
+                </div>
+                </div>
+                <div class="col-sm-2"></div>
+               <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/06-2.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-2"></div>
+              </div>
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/06-3.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-2"></div>
+              </div>
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/06-4.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-2"></div>
+              </div>
+               <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/06-5.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-2"></div>
+              </div>
+          </div><!--=============Page11 end====================-->          
         </div>
       </div>
   </div>
