--- a/index.html
+++ b/index.html
@@ -630,6 +630,8 @@
               <div class="row text-center" >
                 <h1 style="margin-top:10%;">Licensing Flow</h1>
                 <p>軟體授權流程規劃</p>
+                <p>根據不同的角色，進行流程的規劃。包括客戶、銷售維運人員及公司高層，不同的腳色所接觸的到的流程有所不同</p>
+                <br><p>最後根據流程及需求，整理授權後台功能清單。</p>
               </div>
               <div class="row" >
                 <div class="col-sm-2"></div>
@@ -650,6 +652,7 @@
               <div class="row text-center" >
                 <h1 style="margin-top:10%;">Web App Mockup</h1>
                 <p>Using Balsamiq</p>
+                <p>製作互動原型，探討流程的合理性</p>
                 <div  class="btn btn-default " ><a href="pic/ui/mockup/mockup.pdf" target="_blank" >Download PDF</a></div>
               </div>
               <div class="row" >
@@ -688,8 +691,9 @@
           </div><!--=============ui03 end====================-->
           <div id="ui-4" class="tab-pane fade"><!--=============ui04 start====================-->
               <div class="row text-center" >
-                <h1 style="margin-top:10%;">System UI Design II</h1>
+                <h1 style="margin-top:10%;">System UI Design II(虛擬化桌面系統)</h1>
                  <p class="text-center">Define UI Spec > Flow Design > UI Layout > Icon Design</p>
+                 <br><p class="text-center">UI功能展開、風格定義、icon繪製、操作流程定義及動畫設計</p>
               </div>
               <div class="row" >
                 <div class="col-sm-2"></div>
@@ -709,8 +713,9 @@
           </div><!--=============ui04 end====================-->        
           <div id="ui-5" class="tab-pane fade"><!--=============ui05 start====================-->
               <div class="row text-center" >
-                <h1 style="margin-top:10%;">System UI Design III</h1>
+                <h1 style="margin-top:10%;">System UI Design III(檔案加密軟體)</h1>
                  <p class="text-center">Define UI Spec > Flow Design > UI Layout > Icon Design</p>
+                 <br><p class="text-center">UI功能展開、風格定義、icon繪製、操作流程定義</p>
               </div>
               <div class="row" >
                 <div class="col-sm-2"></div>
