--- a/iframe/clock.html
+++ b/iframe/clock.html
@@ -333,7 +333,7 @@
                 <div style="background-color:white;" id="box_date"></div>
             </div>
             <div class="col-sm-2 col-xs-2">
-              <div style="background-color:white;" id="box_day"></div>
+              <div  id="box_day"></div>
             </div>
        </div>
        <br>
