--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
           </div><!--=============ui02 end====================-->
           <div id="ui-3" class="tab-pane fade"><!--=============ui03 start====================-->
               <div class="row text-center" >
-                <h1 style="margin-top:10%;">System UI Design I</h1>
+                <h1 style="margin-top:10%;">System UI Design I(虛擬化桌面系統)</h1>
                  <p class="text-center">Define UI Spec > Flow Design > UI Layout > Icon Design</p>
               </div>
               <div class="row" >
@@ -691,7 +691,7 @@
           </div><!--=============ui03 end====================-->
           <div id="ui-4" class="tab-pane fade"><!--=============ui04 start====================-->
               <div class="row text-center" >
-                <h1 style="margin-top:10%;">System UI Design II(虛擬化桌面系統)</h1>
+                <h1 style="margin-top:10%;">System UI Design II(專利申請平台)</h1>
                  <p class="text-center">Define UI Spec > Flow Design > UI Layout > Icon Design</p>
                  <br><p class="text-center">UI功能展開、風格定義、icon繪製、操作流程定義及動畫設計</p>
               </div>
