--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@
                <div class="col-sm-12"><h3 style="text-align: center;">Login<a  data-toggle="modal" data-target="#login">(HTML)</a></h3><img src="pic/dailyui/daily08.jpg" class="logo img-responsive wow fadeIn"></div>
                 <div class="col-sm-12"><h3 style="text-align: center;">Loading<a data-toggle="modal" data-target="#loading">(HTML)</a></h3><img src="pic/dailyui/daily09.jpg" class="logo img-responsive wow fadeIn"></div>
               <div class="col-sm-12"><h3 style="text-align: center;">Sports App GUI</h3><img src="pic/dailyui/daily11.jpg" class="logo img-responsive wow fadeIn"></div><br>
+               <div class="col-sm-12"><h3 style="text-align: center;">Security App GUI</h3><img src="pic/dailyui/daily12.jpg" class="logo img-responsive wow fadeIn"></div><br>
               <div class="col-sm-12"><h3 style="text-align: center;">Robot Face Animation</h3><iframe width="100%" height="675" src="https://www.youtube.com/embed/cz0tUTKLMdY" frameborder="0" allowfullscreen style="margin:0 auto;"></iframe></div><br>
               <div class="col-sm-12"><h3 style="text-align: center;">Boarding Pass</h3><img src="pic/dailyui/daily01.jpg" class="logo img-responsive wow fadeIn"></div><br>
               <div class="col-sm-12"><h3 style="text-align: center;">Invoice</h3><img src="pic/dailyui/daily02.jpg" class="logo img-responsive wow fadeIn"></div><br>
