--- a/trendmicro.html
+++ b/trendmicro.html
@@ -132,13 +132,13 @@
 		</div>
 		<a-scene>
 		  <a-assets>
-		    <a-asset-item id="crate-obj" src="pic/poly.obj"></a-asset-item>
-		    <a-asset-item id="crate-mtl" src="pic/poly.mtl"></a-asset-item>
+		    <a-asset-item id="crate-obj" src="htt://astrosage.github.io/pic/dailyui/poly.obj"></a-asset-item>
+		    <a-asset-item id="crate-mtl" src="htt://astrosage.github.io/pic/dailyui/poly.mtl"></a-asset-item>
 		  </a-assets>
 		  <!-- Using the asset management system. -->
 		  <a-obj-model src="#crate-obj" mtl="#crate-mtl"></a-obj-model>
 		  <!-- Defining the URL inline. Not recommended but may be more comfortable. -->
-		  <a-obj-model src="crate.obj" mtl="crate.mtl"></a-obj-model>
+		  <a-obj-model src="crate.obj" mtl="htt://astrosage.github.io/pic/dailyui/poly.mtl"></a-obj-model>
 		</a-scene>
 		<div class="circle">
 			<div class="circle3">
